# ProperHtmlFormatter

./: .gitattributes  .gitignore  README.md  package-lock.json  package.json  tsconfig.json  tslint.json  webpack.config.js
crate/: Cargo.toml
crate/src/: lib.rs
crate/src/formatter/: from_options.rs  mod.rs  user_friendly.rs  utils.rs
crate/src/htmls/: sample2.html
crate/src/parser/: attr.rs  context.rs  context_manager.rs  context_trait.rs  errors.rs  lexer.rs  mod.rs  tests.rs  token.rs
crate/src/parser/node/: mod.rs  new_line.rs  node_element.rs  text.rs
crate/src/parser/tokens/: mod.rs  tag_end.rs  tag_start.rs
crate/src/printer/: ast.rs  attr.rs  mod.rs  printable.rs  tests.rs  writer.rs
crate/src/printer/node/: mod.rs  new_line.rs  node_element.rs  text.rs
extension/: index.ts
src/: extension.ts  utils.ts
src/htmlObjects/: htmlAttribute.ts  htmlElement.ts  htmlText.ts
src/newBeginnings/: attribute.ts  comment.ts  element.ts  parser.ts  text.ts
typings/: types.d.ts
