[package]
publish = false
name = "rust-html-formatter"
version = "0.0.0"
license = "(Apache-2.0 OR MIT)"
authors = ["Darin Morrison <freebroccolo@users.noreply.github.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook", "wee_alloc"]

[dependencies]
cfg-if = "0.1.7"
console_error_panic_hook = { version = "0.1.6", optional = true }
js-sys = { version = "0.3.15", features = [] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.3.15"
web-sys = { version = "0.3.15", features = [ "Window" ] }
wee_alloc = { version = "0.4.3", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.2"
